--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,6 @@
+<h3>Post a Comment</h3>
+<p>(Comment form will go here)</p>
+
 <%= form_for(@article) do |f| %>
   <ul>
   <% @article.errors.full_messages.each do |error| %>
