--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,21 +1,15 @@
 <h3>Post a Comment</h3>
-<p>(Comment form will go here)</p>
 
-<%= form_for(@article) do |f| %>
-  <ul>
-  <% @article.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
-  <% end %>
-  </ul>
+<%= form_for [ @article, @comment ] do |f| %>
   <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.label :author_name %><br/>
+    <%= f.text_field :author_name %>
   </p>
   <p>
-    <%= f.label :body %><br />
+    <%= f.label :body %><br/>
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Submit' %>
   </p>
 <% end %>
