--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,8 +2,7 @@
 <p><%= @article.body %></p>
 <%= render partial: 'comments/form' %>
 
-<h3>Comments (<%= @article.comments.size %>)</h3>
-
+<h3>Comments</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= link_to "<< Back to Articles List", articles_path %>
 <%= link_to "delete", article_path(@article), method: :delete, 
