--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,13 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<h1>Articles Tagged with <%= @tag.name %></h1>
+
+<ul>
+  <% @tag.articles.each do |article| %>
+    <li><%= link_to article.title, article_path(article) %></li>
+  <% end %>
+</ul>
 
 <p><%= @article.body %></p>
 <%= render partial: 'comments/form' %>
