--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,6 +23,14 @@
   <%= f.label :image, "Attach an Image" %><br />
   <%= f.file_field :image %>
 </p>
+<p>
+  <% if @article.image.exists? %>
+      <%= image_tag @article.image.url %><br/>
+  <% end %>
+  <%= f.label :image, "Attach a New Image" %><br />
+  <%= f.file_field :image %>
+</p>
+
 
 
 <% end %>
