--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,6 +4,15 @@
     <li><%= error %></li>
   <% end %>
   </ul>
+  <div class="field">
+  <%= f.label :password %><br />
+  <%= f.password_field :password %>
+</div>
+<div class="field">
+  <%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %>
+</div>
+
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
