--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<% if logged_in? %>
+
 <h1><%= @article.title %></h1>
 <p>
   Tags:
@@ -25,4 +27,4 @@
 data: {confirm: "Really delete the article?"}%>
 
 <%= link_to "edit", edit_article_path(@article) %>
-
+<% end %>
